# pthreads_server

./: CMakeLists.txt  LICENSE  klient.c  macros.h  readme.md  report.c  report_api.h  serverStorage.c  serverStorage.h  serwer.c  worker.c  worker.h
tests/: build.sh  clean-build.sh  clean.sh  test.sh
